--- a/frontend/popup.html
+++ b/frontend/popup.html
@@ -1,118 +1,46 @@
-<!-- popup.html -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web Rewriter Settings</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap"
-      rel="stylesheet"
-    />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Web Rewriter Status</title>
     <style>
       body {
-        font-family: "Inter", sans-serif;
-        width: 350px;
+        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+          Helvetica, Arial, sans-serif;
+        width: 280px;
+        padding: 16px;
         background-color: #f8fafc;
+        color: #1e293b;
+      }
+      .container {
+        display: flex;
+        align-items: center;
+        gap: 12px;
+      }
+      .icon {
+        width: 40px;
+        height: 40px;
+      }
+      .text-content h1 {
+        font-size: 16px;
+        font-weight: 600;
+        margin: 0;
+      }
+      .text-content p {
+        font-size: 14px;
+        color: #475569;
+        margin: 4px 0 0 0;
       }
     </style>
   </head>
-  <body class="p-4">
-    <div class="flex items-center space-x-3 mb-4">
-      <img src="icons/icon48.png" alt="icon" class="w-8 h-8" />
-      <h1 class="text-lg font-semibold text-gray-800">Personalized Rewriter</h1>
-    </div>
-
-    <div
-      id="status-message"
-      class="hidden p-2 mb-4 text-sm text-center rounded-md"
-    ></div>
-
-    <div class="space-y-4">
-      <div>
-        <label
-          for="known-topics"
-          class="block text-sm font-medium text-gray-700 mb-1"
-          >Topics I know well:</label
-        >
-        <textarea
-          id="known-topics"
-          rows="3"
-          class="w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-          placeholder="e.g., JavaScript, HTML, CSS"
-        ></textarea>
-      </div>
-
-      <div>
-        <label
-          for="learning-topics"
-          class="block text-sm font-medium text-gray-700 mb-1"
-          >Topics I'm learning:</label
-        >
-        <textarea
-          id="learning-topics"
-          rows="3"
-          class="w-full p-2 border border-gray-300 rounded-md shadow-sm focus:ring-indigo-500 focus:border-indigo-500"
-          placeholder="e.g., React Hooks, Python, AI"
-        ></textarea>
+  <body>
+    <div class="container">
+      <img src="icons/icon48.png" alt="Extension Icon" class="icon" />
+      <div class="text-content">
+        <h1>Personalized Rewriter</h1>
+        <p>The extension is active and will rewrite pages automatically.</p>
       </div>
     </div>
-
-    <button
-      id="save-button"
-      class="mt-4 w-full bg-indigo-600 text-white font-semibold py-2 px-4 rounded-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 transition-colors duration-200"
-    >
-      Save Profile
-    </button>
-
-    <script src="popup.js"></script>
   </body>
 </html>
-
-<!-- popup.js -->
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const knownTopicsEl = document.getElementById("known-topics");
-    const learningTopicsEl = document.getElementById("learning-topics");
-    const saveButton = document.getElementById("save-button");
-    const statusMessageEl = document.getElementById("status-message");
-
-    // Load saved settings from storage and populate the textareas
-    chrome.storage.sync.get(["knownTopics", "learningTopics"], (result) => {
-      if (result.knownTopics) {
-        knownTopicsEl.value = result.knownTopics.join(", ");
-      }
-      if (result.learningTopics) {
-        learningTopicsEl.value = result.learningTopics.join(", ");
-      }
-    });
-
-    // Save settings when the button is clicked
-    saveButton.addEventListener("click", () => {
-      // Split by comma and trim whitespace from each topic
-      const knownTopics = knownTopicsEl.value
-        .split(",")
-        .map((s) => s.trim())
-        .filter(Boolean);
-      const learningTopics = learningTopicsEl.value
-        .split(",")
-        .map((s) => s.trim())
-        .filter(Boolean);
-
-      chrome.storage.sync.set({ knownTopics, learningTopics }, () => {
-        // Show a confirmation message
-        statusMessageEl.textContent = "Profile saved successfully!";
-        statusMessageEl.classList.remove(
-          "hidden",
-          "bg-red-100",
-          "text-red-700"
-        );
-        statusMessageEl.classList.add("bg-green-100", "text-green-700");
-        setTimeout(() => {
-          statusMessageEl.classList.add("hidden");
-        }, 2000);
-      });
-    });
-  });
-</script>
